2008-04-15  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: hide GtkKey_ for manual impl.
	* gtk/Key.cs: manual implementation to manage delegate wrapper
	persistence.  [Fixes #378989]

2008-04-15  Mike Kestner  <mkestner@novell.com>

	* gtk/FileSystemModel.custom: remove dead file. 

2008-04-15  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs: marshal null string arrays as a null IntPtr[].
	[Fixes #378514]

2008-04-14  Mike Kestner  <mkestner@novell.com>

	* gtk/Application.cs: add QuitPrepare event for Gnome.Program usage.

2008-04-08  Marek Habersack  <mhabersack@novell.com>

	* generator/InterfaceGen.cs: added a check for null obj in the
	generated GetObject method.

2008-04-04  Mike Kestner  <mkestner@novell.com>

	* atk/Atk.metadata: add a few more owned refs.

2008-04-04  Mike Kestner  <mkestner@novell.com>

	* glib/Global.cs: renamed from Program.cs.  Program.Name is now 
	Global.ProgramName to try to avoid clashes with existing Gnome.Program
	usage.
	* gtk/Application.cs: s/GLib.Program.Name/GLib.Global.ProgramName.

2008-04-04  Mike Kestner  <mkestner@novell.com>

	* atk/Atk.metadata: markup all the Ref* methods to indicate owned refs.
	* generator/ReturnValue.cs: Add owned object ToNative handling.
	* generator/VirtualMethod.cs: Split ToNative call from managed method
	invocation to avoid duplicate calls in null checking scenarios.
	* glib/Object.cs: add OwnedHandle property for use by language binding
	code which needs to pass owned refs to native methods.

2008-04-04  Mike Kestner  <mkestner@novell.com>

	* atk/Object.custom: take out a ref on the return value of
	OnRefChild.  Also add some null guarding and default to IntPtr.Zero
	on exceptions.

2008-04-01  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs: support "generic" interface
	implementations like those exposed by gio.  This is specifically for
	libraries which return GTypes which are not exposed by the library