@@ -1,5 +1,13 @@
 2008-04-15  Mike Kestner  <mkestner@novell.com>
 
+	* generator/ReturnValue.cs: use new GLib.Opaque.OwnedCopy for owned
+	opaque return values.
+	* glib/Opaque.cs: introduce OwnedCopy property to support returning
+	owned opaque instances from native to managed callbacks. 
+	[Fixes #374641]
+
+2008-04-15  Mike Kestner  <mkestner@novell.com>
+
 	* gtk/Gtk.metadata: hide GtkKey_ for manual impl.
 	* gtk/Key.cs: manual implementation to manage delegate wrapper
 	persistence.  [Fixes #378989]
